--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,14 @@ body{
 /*************************
 Added classes
 **************************/
+/*adds colour red to paragraphs when called by jquery function*/
 .highlight_text {
-
+    background-color: #EB5255;
 }
 
+/*adds colour lightblue to h2 background when called by jquery function*/
 .h2_color {
-
+    background-color: lightblue;
 }
 /*************************
 **************************/
