--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,17 @@ Added classes
 **************************/
 /*adds colour red to paragraphs when called by jquery function*/
 .highlight_text {
-    background-color: #EB5255;
+    color: #EB5255;
 }
 
 /*adds colour lightblue to h2 background when called by jquery function*/
 .h2_color {
     background-color: lightblue;
+}
+
+/*increases font-size of  h2 when called by jquery function*/
+.h2_font_size {
+	font-size: 2em;
 }
 /*************************
 **************************/
